Add some debugging log messages